--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -77,6 +77,12 @@
     color: #1775ee;
 }
 
+.loginRegisterWrapper {
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+}
+
 .loginRegisterButton {
     width: 60%;
     align-self: center;
