--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -69,6 +69,12 @@
     color: #1775ee;
 }
 
+.loginRegisterWrapper {
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+}
+
 .loginRegisterButton {
     width: 60%;
     align-self: center;
